--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maps-gearup",
+  "name": "term-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
+    "@types/node": "^20.10.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-map-gl": "^6.1.5",
