--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "react-scripts start",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
@@ -15,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.6",
-    "react-map-gl-geocoder": "^2.2.0"
+    "react-map-gl-geocoder": "^2.2.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
