--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mapbox-gl": "^2.15.0",
     "mongo": "^0.1.0",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.0.2",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,13 +24,15 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-map-gl": "^6.1.5",
     "@vitejs/plugin-react": "^3.1.0",
     "playwright": "^1.39.0",
-    "typescript": "^4.9.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5",
     "vite": "^4.2.0"
   }
 }
