--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mapbox-gl": "^2.15.0",
     "mongo": "^0.1.0",
     "mongodb": "^6.3.0",
+    "mongodb-stitch-browser-sdk": "^4.8.0",
     "mongoose": "^8.0.2",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
@@ -33,6 +34,7 @@
     "playwright": "^1.39.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-plugin-node-polyfills": "^0.17.0"
   }
 }
