--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "bson": "^6.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mapbox-gl": "^2.15.0",
