--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mapbox-gl": "^2.15.0",
     "mongo": "^0.1.0",
     "mongodb": "^6.3.0",
-    "mongodb-stitch-browser-sdk": "^4.8.0",
+    "mongodb-stitch-browser-sdk": "^4.3.0",
+    "mongodb-stitch-core-sdk": "^4.3.0",
     "mongoose": "^8.0.2",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.6",
-    "react-map-gl-geocoder": "^2.2.0"
+    "react-map-gl-geocoder": "^1.8.1",
+    "realm-web": "^2.0.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
