--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.6",
     "react-map-gl-geocoder": "^1.8.1",
+    "react-router-dom": "^6.21.0",
     "realm-web": "^2.0.0"
   },
   "devDependencies": {
@@ -33,11 +34,11 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-map-gl": "^6.1.5",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "playwright": "^1.39.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
-    "vite": "^4.2.0",
+    "vite": "^5.0.10",
     "vite-plugin-node-polyfills": "^0.17.0"
   }
 }
