--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-map-gl": "^6.1.5",
     "@vitejs/plugin-react": "^3.1.0",
-    "jest": "^29.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "playwright": "^1.39.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
@@ -46,6 +47,6 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node"
+    "testEnvironment": "jsdom"
   }
 }
