--- a/artists_corner_0/frontend/web.mql.todo/package.json
+++ b/artists_corner_0/frontend/web.mql.todo/package.json
@@ -10,8 +10,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "mongodb-stitch-browser-sdk": "^4.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
     "realm-web": "^2.0.0",
     "tss-react": "^4.6.0",
     "web-vitals": "^3.1.1"
