--- a/artists_corner_0/frontend/web.mql.todo/package.json
+++ b/artists_corner_0/frontend/web.mql.todo/package.json
@@ -45,6 +45,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.8",
     "c8": "^7.13.0",
+    "jest": "^29.7.0",
     "jsdom": "^21.1.1",
     "rollup": "^3.20.2",
     "vite": "^4.2.1",
