--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "start": "react-scripts start",
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom/extend-expect"
+    ]
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -24,16 +30,20 @@
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.6",
     "react-map-gl-geocoder": "^2.2.0",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-map-gl": "^6.1.5",
     "@vitejs/plugin-react": "^3.1.0",
+    "jest": "^29.7.0",
     "playwright": "^1.39.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
